# This file is used by the GN meta build system to find the root of the source
# tree and to set startup options. For documentation on the values set in this
# file, run "gn help dotfile" at the command line.

import("//v8/build/dotfile_settings.gni")

# The location of the build configuration file.
buildconfig = "//v8/build/config/BUILDCONFIG.gn"

# The secondary source root is a parallel directory tree where
# GN build files are placed when they can not be placed directly
# in the source tree, e.g. for third party source trees.
secondary_source = "//v8/"

# These are the targets to check headers for by default. The files in targets
# matching these patterns (see "gn help label_pattern" for format) will have
# their includes checked for proper dependencies when you run either
# "gn check" or "gn gen --check".
check_targets = []

# These are the list of GN files that run exec_script. This whitelist exists
# to force additional review for new uses of exec_script, which is strongly
# discouraged except for gypi_to_gn calls.
exec_script_whitelist = build_dotfile_settings.exec_script_whitelist + []

default_args = {
  # Default to release builds for this project.
  is_debug = true
  is_component_build = false
  #libcpp_is_static = false
  #use_custom_libcxx = false
  #use_sysroot = false
  #v8_target_cpu = "x64"
  #v8_static_library = false
  symbol_level = 1
  treat_warnings_as_errors = false
  v8_deprecation_warnings = false
  v8_embedder_string = "-msgts"
  v8_enable_gdbjit = false
  v8_enable_i18n_support = false
  v8_enable_test_features = false
  v8_experimental_extra_library_files = []
  v8_extra_library_files = []
  v8_imminent_deprecation_warnings = false
  v8_monolithic = true
  v8_untrusted_code_mitigations = false
  v8_use_external_startup_data = false
  v8_use_snapshot = true
}
