import("//third_party/protobuf/proto_library.gni")

proto_library("msg_proto") {
  sources = [
    "msg.proto",
  ]
}

#v8_extra_library_files += [
#  "dist/main.js"
#]

executable("hello") {
  sources = [
    "binding.cc",
    "binding.h",
    "main.cc",
  ]
  deps = [
    ":msg_proto",
    "v8:v8",
  ]
}
